Clone codex repo in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Fetch codex protocol dependency
+        run: |
+          git clone --depth 1 https://github.com/openai/codex ../codex
+
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
 
